--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="">
                 <div class="flex items-center justify-between rounded-2xl bg-white p-3 shadow dark:bg-black dark:shadow-dark">
                     <!-- Logo -->
-                    <a href="https://marveltheme.com/tf/html/bentofolio-preview/index.html" class="inline-flex items-center gap-3 px-3 text-2xl font-semibold text-dark dark:text-white">
+                    <a href="https://istiakerik.github.io/" class="inline-flex items-center gap-3 px-3 text-2xl font-semibold text-dark dark:text-white">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="h-6 w-6">
                             <path fill="currentColor" d="M0 1.5A1.5 1.5 0 0 1 1.5 0H9a1.5 1.5 0 0 1 1.5 1.5v21A1.5 1.5 0 0 1 9 24H1.5A1.5 1.5 0 0 1 0 22.5v-21Zm13.5 0A1.5 1.5 0 0 1 15 0h7.5A1.5 1.5 0 0 1 24 1.5V9a1.5 1.5 0 0 1-1.5 1.5H15A1.5 1.5 0 0 1 13.5 9V1.5Zm0 13.5a1.5 1.5 0 0 1 1.5-1.5h7.5A1.5 1.5 0 0 1 24 15v7.5a1.5 1.5 0 0 1-1.5 1.5H15a1.5 1.5 0 0 1-1.5-1.5V15Z"></path>
                         </svg>
@@ -655,7 +655,7 @@
             <div class="rounded-2xl bg-white p-6 shadow dark:bg-black dark:shadow-dark">
                 <div class="flex flex-wrap items-center justify-between gap-2">
                     <h3 class="text-2xl font-semibold dark:text-light">Recent Projects</h3>
-                    <a href="https://marveltheme.com/tf/html/bentofolio-preview/index.html" class="inline-flex items-center justify-center gap-2 border-b text-center text-base text-primary transition hover:border-b-primary dark:border-b-muted dark:hover:border-b-primary">
+                    <a href="https://istiakerik.github.io/" class="inline-flex items-center justify-center gap-2 border-b text-center text-base text-primary transition hover:border-b-primary dark:border-b-muted dark:hover:border-b-primary">
                         <span>All Projects</span>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" class="h-5 w-5">
                             <path d="M4.167 10h11.666m-4.999 5 5-5m-5-5 5 5"></path>
@@ -705,7 +705,7 @@
             <div class="rounded-2xl bg-white p-6 shadow dark:bg-black dark:shadow-dark lg:col-span-2">
                 <div class="flex flex-wrap items-center justify-between gap-2">
                     <h3 class="text-2xl font-semibold dark:text-light">Things I Love to do</h3>
-                    <a href="https://marveltheme.com/tf/html/bentofolio-preview/index.html" class="inline-flex items-center justify-center gap-2 border-b text-center text-base text-primary transition hover:border-b-primary dark:border-b-muted dark:hover:border-b-primary">
+                    <a href="https://istiakerik.github.io/" class="inline-flex items-center justify-center gap-2 border-b text-center text-base text-primary transition hover:border-b-primary dark:border-b-muted dark:hover:border-b-primary">
                         <span>About Me</span>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" class="h-5 w-5">
                             <path d="M4.167 10h11.666m-4.999 5 5-5m-5-5 5 5"></path>
