--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                         <div class="animate-scrollY space-y-4 group-hover:[animation-play-state:paused]">
                             <div class="flex flex-col gap-1 md:flex-row md:gap-10">
                                 <p class="mt-1 text-sm font-medium text-muted dark:text-light/70">
-                                    2023 - 2024
+                                    Till 2017
                                 </p>
                                 <div class="flex items-center gap-3">
                                     <div class="grid h-8 w-8 shrink-0 place-content-center rounded-lg bg-light dark:bg-dark-2">
@@ -317,17 +317,17 @@
                                     </div>
                                     <div class="">
                                         <h6 class="text-base font-semibold text-dark dark:text-light/70">
-                                            Coursera
+                                            Daffodil International School
                                         </h6>
                                         <p class="text-sm text-muted">
-                                            Software Development
+                                            English Medium
                                         </p>
                                     </div>
                                 </div>
                             </div>
                             <div class="flex flex-col gap-1 md:flex-row md:gap-10">
                                 <p class="mt-1 text-sm font-medium text-muted dark:text-light/70">
-                                    2024 - 2024
+                                    2018 - 2024
                                 </p>
                                 <div class="flex items-center gap-3">
                                     <div class="grid h-8 w-8 shrink-0 place-content-center rounded-lg bg-light dark:bg-dark-2">
@@ -335,15 +335,16 @@
                                     </div>
                                     <div class="">
                                         <h6 class="text-base font-semibold text-dark dark:text-light/70">
-                                            Harvard CS50
+                                            Mawna ML High School
                                         </h6>
-                                        <p class="text-sm text-muted">Web Development</p>
+                                        <p class="text-sm text-muted">SSC Academics
+				 </p>
                                     </div>
                                 </div>
                             </div>
                             <div class="flex flex-col gap-1 md:flex-row md:gap-10">
                                 <p class="mt-1 text-sm font-medium text-muted dark:text-light/70">
-                                    2026 - 2031
+                                    2024 - 2026 (Current)
                                 </p>
                                 <div class="flex items-center gap-3">
                                     <div class="grid h-8 w-8 shrink-0 place-content-center rounded-lg bg-light dark:bg-dark-2">
@@ -351,15 +352,15 @@
                                     </div>
                                     <div class="">
                                         <h6 class="text-base font-semibold text-dark dark:text-light/70">
-                                            BUET
+                                            BAF Shaheen College Dhaka
                                         </h6>
-                                        <p class="text-sm text-muted">CSE</p>
+                                        <p class="text-sm text-muted">HSC Academics</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="flex flex-col gap-1 md:flex-row md:gap-10">
                                 <p class="mt-1 text-sm font-medium text-muted dark:text-light/70">
-                                    2026 - 2031
+                                    2024 - 2026
                                 </p>
                                 <div class="flex items-center gap-3">
                                     <div class="grid h-8 w-8 shrink-0 place-content-center rounded-lg bg-light dark:bg-dark-2">
@@ -367,9 +368,9 @@
                                     </div>
                                     <div class="">
                                         <h6 class="text-base font-semibold text-dark dark:text-light/70">
-                                            BUET
+                                            BAF Shaheen College Dhaka
                                         </h6>
-                                        <p class="text-sm text-muted">CSE</p>
+                                        <p class="text-sm text-muted">HSC Academics</p>
                                     </div>
                                 </div>
                             </div>
@@ -420,9 +421,9 @@
                                     </div>
                                     <div class="">
                                         <h6 class="text-base font-semibold text-dark dark:text-light/70">
-                                            BUET
+                                            BAF Shaheen College Dhaka
                                         </h6>
-                                        <p class="text-sm text-muted">CSE</p>
+                                        <p class="text-sm text-muted">HSC Academics</p>
                                     </div>
                                 </div>
                             </div>
@@ -436,9 +437,9 @@
                                     </div>
                                     <div class="">
                                         <h6 class="text-base font-semibold text-dark dark:text-light/70">
-                                            BUET
+                                            BAF Shaheen College Dhaka
                                         </h6>
-                                        <p class="text-sm text-muted">CSE</p>
+                                        <p class="text-sm text-muted">HSC Academics</p>
                                     </div>
                                 </div>
                             </div>
