--- a/index.html
+++ b/index.html
@@ -244,11 +244,17 @@
 							</span>
                         🖥️ &amp;
                         <span class="font-semibold text-dark dark:text-white">
-                            Ambitious Learner
+                            Physics Enthusiast
 							</span>
                             aiming to make an  
                         <span class="font-semibold text-dark dark:text-white"> impact </span>
-                        globally.<br>Timezone: <span class="font-semibold text-dark dark:text-white">+6 GMT</span>
+                        globally.<br>Github: <a href="https://github.com/IstiakErik" class="mt-6 inline-flex items-center justify-center gap-2 border-b text-center text-base text-primary transition hover:border-b-primary dark:border-b-muted dark:hover:border-b-primary">
+                    <span>github.io/istiakerik</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" class="h-5 w-5">
+                        <path d="M17.5 11.667v-5h-5"></path>
+                        <path d="m17.5 6.667-7.5 7.5-7.5-7.5"></path>
+                    </svg>
+                </a>
                     </p>
 
                     <!-- CTA buttons -->
@@ -762,17 +768,17 @@
             <!-- Contact -->
             <div class="rounded-2xl bg-white p-6 shadow dark:bg-black dark:shadow-dark">
                 <marquee behavior="scroll" direction="left" class="overflow-hidden text-nowrap rounded-lg bg-light p-3 text-lg font-medium text-muted dark:bg-dark-2">
-                    Currently on Learning Phase 🚀 Coming Soon, Stronger 🚀
+                    Explore Physics and Astronomy Like Never Before 🚀 Join hundreds of Enthusiasts, Learn Everyday - From Quarks to Quasars 🚀
                     
                 </marquee>
 
                 <h2 class="mt-4 text-[40px] font-semibold leading-snug text-dark dark:text-light">
                     Check Out<br>
-						My Github
+						Phizixness
                 </h2>
 
-                <a href="https://github.com/IstiakErik" class="mt-6 inline-flex items-center justify-center gap-2 border-b text-center text-base text-primary transition hover:border-b-primary dark:border-b-muted dark:hover:border-b-primary">
-                    <span>github.io/istiakerik</span>
+                <a href="https://www.phizixness.github.io" class="mt-6 inline-flex items-center justify-center gap-2 border-b text-center text-base text-primary transition hover:border-b-primary dark:border-b-muted dark:hover:border-b-primary">
+                    <span>phizixness.github.io</span>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" class="h-5 w-5">
                         <path d="M17.5 11.667v-5h-5"></path>
                         <path d="m17.5 6.667-7.5 7.5-7.5-7.5"></path>
@@ -784,7 +790,7 @@
         <!-- Footer -->
         <footer class="text-center">
             <p class="text-sm dark:text-light/70">
-                @ 2024 - Designed By
+                @ 2025 - Designed By
                 <a href="https://github.com/IstiakErik" class="inline-block border-b border-b-transparent text-primary transition hover:border-b-primary hover:text-blue-600">
                     Istiak Erik
                 </a>
