--- a/index.html
+++ b/index.html
@@ -248,7 +248,8 @@
 							</span>
                             aiming to make an  
                         <span class="font-semibold text-dark dark:text-white"> impact </span>
-                        globally, Based on Dhaka, Bangladesh<br>Founder of <span class="font-semibold text-dark dark:text-white">Phizixness Org</span>, An Article Website on Physics and Astronomy<br>Github: <a href="https://github.com/IstiakErik" class="mt-6 inline-flex items-center justify-center gap-2 border-b text-center text-base text-primary transition hover:border-b-primary dark:border-b-muted dark:hover:border-b-primary">
+                        globally, Based on Dhaka, Bangladesh.</p>
+<p>Founder of <span class="font-semibold text-dark dark:text-white">Phizixness Org</span>, An Article Website on Physics and Astronomy<br>Github: <a href="https://github.com/IstiakErik" class="mt-6 inline-flex items-center justify-center gap-2 border-b text-center text-base text-primary transition hover:border-b-primary dark:border-b-muted dark:hover:border-b-primary">
                     <span>github.io/istiakerik</span>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" class="h-5 w-5">
                         <path d="M17.5 11.667v-5h-5"></path>
